# giphy-mcp-server

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  demo_agent.py  giphy-mcp.py  pyproject.toml
.agents/skills/giphy-chat/: SKILL.md
.agents/skills/giphy-docs/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml  python-publish.yml  release.yml
src/giphy_mcp/: __about__.py  __init__.py  server.py
tests/: test_server.py
