[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giphy-mcp"
version = "0.1.0"
description = "An MCP server for integrating Giphy into AI agents."
readme = "README.md"
authors = [
    { name = "Contributors", email = "contributors@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
giphy-mcp = "giphy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/giphy_mcp"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src/giphy_mcp --cov-report=term-missing"
