[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giphy-mcp"
dynamic = ["version"]
description = "A Model Context Protocol (MCP) server that empowers AI agents to search and retrieve lively GIFs from Giphy, enhancing chat and documentation experiences."
readme = "README.md"
keywords = ["mcp", "giphy", "ai", "agents", "chat", "gifs", "modelcontextprotocol","GIF"]
authors = [
    { name = "Contributors", email = "contributors@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0"
]

[project.urls]
Homepage = "https://github.com/Szatek/giphy-mcp-server"
Repository = "https://github.com/Szatek/giphy-mcp-server"
Issues = "https://github.com/Szatek/giphy-mcp-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
giphy-mcp = "giphy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/giphy_mcp"]

[tool.hatch.version]
path = "src/giphy_mcp/__about__.py"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=src/giphy_mcp --cov-report=term-missing"
